# hyprmaster

./: .envrc  .vimrc.lua  Cargo.toml  README.md  flake.nix  install-schema.sh  rust-toolchain.toml  rustfmt.toml  slint-viewer.sh
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: dypz1x3v97mcnwjp2kn4pvjzy59b5vjg-source  zi0iy8z3kp94iz5vbjhalfdlflx8h4pj-source
daemon/: Cargo.toml
daemon/src/: main.rs
data/schema/: org.hypr.Hyprmaster.tablet.gschema.xml
hyprmaster/: Cargo.toml  build.rs
hyprmaster/src/: icons.rs  main.rs  old.rs  utils.rs  xdg.rs
hyprmaster/src/apps/: model.rs  service.rs
hyprmaster/src/proxies/: mod.rs
hyprmaster/src/services/: apps.rs  mod.rs  tablet.rs
hyprmaster/src/tablet/: controller.rs  mod.rs  model.rs  service.rs
hyprmaster/src/tablet/models/: app_entries.rs  bindings.rs  mod.rs  presets.rs
hyprmaster/src/theme/: mod.rs
hyprmaster/ui/: components.slint  globals.slint  main.slint
hyprmaster/ui/sections/: mod.slint  screen.slint  tablet.slint  theme.slint
hyprmaster/ui/widgets/: boxes.slint  buttons.slint  modal.slint
src/: apps.rs  icons.rs  main.rs  tablet.rs
src/apps/: model.rs
src/models/: app_entries.rs  mod.rs
ui/: app-window.slint  components.slint  globals.slint
ui/sections/: hypr.slint  pkgs.slint  tablet.slint  wallpaper.slint
ui/widgets/: boxes.slint  buttons.slint  input.slint  modal.slint
zaemon/: Cargo.toml
zaemon/src/: dconf.rs  lib.rs  main.rs
zaemon/src/api/: mod.rs  otd.rs
zaemon/src/interfaces/: apps.rs  hyprland.rs  icons.rs  mod.rs  tablet.rs
zaemon/src/objects/: apps.rs  mod.rs  tablet.rs
zaemon/src/utils/: mod.rs  notify.rs  semver.rs
