[package]
name = "hyprmaster"
version = "0.1.0"
edition = "2021"

[dependencies]
debounce = "0.2.2"
freedesktop_entry_parser = "1.3.0"
image = "0.25.5"
ini = "1.3.0"
slint = "1.8.0"
tokio = {version = "1.41.1", features = ["full"]}
unicode-normalization = "0.1.24"
walkdir = "2.5.0"

[build-dependencies]
slint-build = "1.8.0"
