[package]
name = "hyprmaster"
version = "0.1.0"
edition = "2021"

[dependencies]
dbus = "0.9.7"
debounce = "0.2.2"
freedesktop_entry_parser = "1.3.0"
image = "0.25.5"
ini = "1.3.0"
serde = "1.0.217"
slint = "1.8.0"
unicode-normalization = "0.1.24"
walkdir = "2.5.0"
zvariant = "5.2.0"

[dependencies.tokio]
version = "1.43.0"
features= [ "full" ]

[dependencies.zbus]
version = "5.3.0"
default-features = true

[dependencies.zaemon]
path = "../zaemon"

[build-dependencies]
slint-build = "1.8.0"
