[package]
name = "zaemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "zaemon"
path = "src/lib.rs"

[[bin]]
name = "hyprmaster-daemon"
path = "src/main.rs"

[dependencies]
async-stream = "0.3.6"
freedesktop_entry_parser = "1.3.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
ini = "1.3.0"
notify-debouncer-full = "0.5.0"
serde = "1.0.217"
walkdir = "2.5.0"
zvariant = "5.2.0"

[dependencies.zbus]
version = "5.3.0"
default-features = false
features = [ "tokio" ]

[dependencies.tokio]
version = "1.43.0"
features = [ "full" ]
