[package]
name = "zaemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "zaemon"
path = "src/lib.rs"

[[bin]]
name = "hyprmaster-daemon"
path = "src/main.rs"

[dependencies]
async-stream = "0.3.6"
freedesktop_entry_parser = "1.3.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
gvariant = "0.5.0"
i-slint-core = "1.9.2"
ini = "1.3.0"
notify-debouncer-full = "0.5.0"
rgb = "0.8.50"
serde_bytes = "0.11.15"
serde_json = "1.0.137"
walkdir = "2.5.0"

[dependencies.zbus]
version = "5.3.0"
default-features = false
features = [ "tokio", "serde_bytes" ]

[dependencies.tokio]
version = "1.43.0"
features = [ "full" ]

[dependencies.serde]
version = "1.0.217"
features = [ "derive", "std" ]
